--- a/less/current/modules/table-settings-form.less
+++ b/less/current/modules/table-settings-form.less
@@ -5,5 +5,6 @@
     border: none;
     margin-bottom: 5px;
     color: @color-darker-gray;
+    font-weight: bold;
   }
 }
